syntax = "proto3";

package logsdb.protos.replication;

service Replicator {
  rpc replicate(ReplicateRequest) returns (stream TransactionLog) {}
}

message ReplicateRequest {
  uint64 sequenceNumber = 2;
}

message TransactionLog {
  uint64 sequenceNumber = 1;
  repeated Record records = 2;
}

message Record {
  string collection = 1;
  bytes key = 2;
  bytes value = 3;
}
